plugins {
    id "java"
    id "org.jetbrains.kotlin.jvm" version "1.4.21"
    id "com.adarshr.test-logger" version "2.1.1"
    id "jacoco"
    id "com.github.spotbugs" version "4.6.0"
}

group = 'com.demo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'
configurations.testImplementation.canBeResolved = true

repositories {
    mavenCentral()
    maven {
        name "DynamoDB Local Release Repo"
        url "https://s3-us-west-2.amazonaws.com/dynamodb-local/release"
    }
}

ext {
    aws_sdk_version = "1.11.826"
    aws_xray_version = "2.4.0"
    guava_version = "30.1-jre"
    http4k_version = "3.285.2"
    jackson_version = "2.12.0"
    log4j_version = "2.13.3"
    junit_version = "5.7.0"
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    kotlinOptions {
        suppressWarnings = false
        jvmTarget = "11"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["-parameters"]
}

tasks.withType(Test) {
    outputs.upToDateWhen { false }
}

testlogger {
    showExceptions false
    // log tests that take longer than ...
    slowThreshold 2000
}

jacocoTestReport {
    dependsOn test
}

spotbugsMain {
    ignoreFailures = false
    showStackTraces = false
    excludeFilter = file("spotbugs-exclude.xml")
    reports {
        html {
            enabled = true
            destination = file("$projectDir/../../../../out/reports/spotbugs-incremental-distribution.html")
            stylesheet = 'fancy-hist.xsl'
        }
    }
}

spotbugsTest.enabled = false // do not run spotbugs against the test-suite for now

task copyNativeDependencies(type: Copy) {
    from(configurations.testImplementation) {
        include '*.dll'
        include '*.dylib'
        include '*.so'
    }
    into 'build/libs'
}

test {
    useJUnitPlatform()

    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1

    scanForTestClasses = false

    filter {
        includeTestsMatching "*Test"
        excludeTestsMatching "smoke.*"
        excludeTestsMatching "db.*"
    }

    testlogger {
        showStandardStreams false
        showPassed false
    }

    dependsOn copyNativeDependencies

    test.doFirst {
        systemProperty "java.library.path", 'build/libs'
    }

    finalizedBy jacocoTestReport
}

task testUnit {
    dependsOn(check)
}

task testSmoke(type: Test) {
    description = 'Runs smoke tests.'
    group = 'verification'

    reports.junitXml.destination = file("$projectDir/../../../../out/reports")

    useJUnitPlatform()

    filter {
        includeTestsMatching "smoke.*Test"
    }
}

task generateSignature(type: JavaExec) {
    group = "Execution"
    description = "Generate signature for some file"
    classpath = sourceSets.main.runtimeClasspath
    main = "uk.nhs.nhsx.core.signature.DistributionSignatureMain"
    args System.getProperty("sign.args", "").split()
}

task exploreExportFile(type: JavaExec) {
    group = "Execution"
    description = "Explore export.bin in working directory"
    classpath = sourceSets.main.runtimeClasspath
    main = "uk.nhs.nhsx.diagnosiskeydist.ExportFileExplorer"
    args System.getProperty("explore.args", "").split()
}

task zipLambdaDistribution(type: Zip) {
    preserveFileTimestamps = false
    reproducibleFileOrder = true

    from compileJava
    from compileKotlin
    from processResources
    into("lib") {
        from configurations.runtimeClasspath
    }
}

task lambdaZip {
    dependsOn(check, zipLambdaDistribution)
}


dependencies {
    implementation "com.amazonaws:aws-lambda-java-core:1.2.1"
    implementation "com.amazonaws:aws-lambda-java-log4j2:1.2.0"
    implementation "com.amazonaws:aws-lambda-java-events:2.2.9"

    implementation platform("com.amazonaws:aws-java-sdk-bom:$aws_sdk_version")
    implementation "com.amazonaws:aws-java-sdk-kms"
    implementation "com.amazonaws:aws-java-sdk-cloudfront"
    implementation "com.amazonaws:aws-java-sdk-secretsmanager"
    implementation "com.amazonaws:aws-java-sdk-s3"
    implementation "com.amazonaws:aws-java-sdk-ssm"
    implementation "com.amazonaws:aws-java-sdk-dynamodb"
    implementation "com.amazonaws:aws-java-sdk-kinesis"

    implementation platform("com.amazonaws:aws-xray-recorder-sdk-bom:$aws_xray_version")
    implementation "com.amazonaws:aws-xray-recorder-sdk-core"
    implementation "com.amazonaws:aws-xray-recorder-sdk-aws-sdk-core"
    implementation "com.amazonaws:aws-xray-recorder-sdk-aws-sdk"
    implementation "com.amazonaws:aws-xray-recorder-sdk-aws-sdk-instrumentor"

    implementation platform("org.apache.logging.log4j:log4j-bom:$log4j_version")
    implementation "org.apache.logging.log4j:log4j-api"
    implementation "org.apache.logging.log4j:log4j-core"

    implementation "com.google.guava:guava:$guava_version"

    implementation platform("com.google.protobuf:protobuf-bom:3.12.2")
    implementation "com.google.protobuf:protobuf-java"

    implementation "at.favre.lib:bcrypt:0.9.0"

    implementation platform("com.fasterxml.jackson:jackson-bom:$jackson_version")
    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation "com.fasterxml.jackson.module:jackson-module-parameter-names"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"

    implementation "com.beust:jcommander:1.78"
    implementation "javax.xml.bind:jaxb-api:2.1"

    testImplementation "com.amazonaws:aws-java-sdk-athena"
    testImplementation "com.amazonaws:aws-java-sdk-lambda"
    testImplementation "com.amazonaws:DynamoDBLocal:1.13.5"

    testImplementation platform("org.junit:junit-bom:$junit_version")
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testImplementation "org.junit.jupiter:junit-jupiter-params"
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation "org.hamcrest:hamcrest:2.2"
    testImplementation "com.github.npathai:hamcrest-optional:2.0.0"
    testImplementation "org.assertj:assertj-core:3.18.1"
    testImplementation "org.skyscreamer:jsonassert:1.5.0"
    testImplementation "org.mockito:mockito-core:3.6.0"
    testImplementation "com.natpryce:snodge:3.7.0.0"
    testRuntimeOnly "org.glassfish:javax.json:1.1"

    testImplementation platform("org.http4k:http4k-bom:$http4k_version")
    testImplementation "org.http4k:http4k-aws"
    testImplementation "org.http4k:http4k-core"
    testImplementation "org.http4k:http4k-format-jackson"
    testImplementation "org.http4k:http4k-testing-hamkrest"
    testImplementation "org.http4k:http4k-testing-approval"

    testImplementation "io.mockk:mockk:1.10.2"
    testImplementation "org.apache.commons:commons-lang3:3.11"

    testImplementation "org.bitbucket.b_c:jose4j:0.7.2"

    testImplementation "org.bouncycastle:bcpkix-jdk15on:1.68"
    testImplementation "org.bouncycastle:bcprov-ext-jdk15on:1.68"

    testImplementation "com.github.tomakehurst:wiremock-jre8:2.27.0"
    testImplementation "ru.lanwen.wiremock:wiremock-junit5:1.0.1"
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
